--- a/gestionReservas/UI/GeneralMessage.axaml
+++ b/gestionReservas/UI/GeneralMessage.axaml
@@ -10,8 +10,8 @@
         MaxHeight="1000" MaxWidth="1000">
     <StackPanel Margin="5">
             
-        <TextBlock Margin="5" Name="AboutText"></TextBlock>
-        <Button Margin="5" Name="salirAyuda" Content="Volver"></Button>
+        <TextBlock Margin="5" Name="AboutText" HorizontalAlignment="Center"></TextBlock>
+        <Button Margin="5" Name="salirAyuda" Content="Volver" HorizontalAlignment="Center"></Button>
         <DockPanel Margin="5" HorizontalAlignment="Center">
             <Button  Name="btAceptar" Margin="5" IsVisible="False" Content="Si"></Button>    
             <Button  Name="btCancelar" Margin="5" IsVisible="False" Content="No"></Button>    
